fix z-index navbar

--- a/ECommerce/public/css/Nav.css
+++ b/ECommerce/public/css/Nav.css
@@ -1,4 +1,5 @@
 .HEADER {
+    z-index: 1000000000000000000000000000000000;
     display: flex;
     top: 0;
     position: fixed;
